fix rule id spacing

--- a/src/scss/partials/_rules.scss
+++ b/src/scss/partials/_rules.scss
@@ -30,6 +30,6 @@
     font-family: $global-font-family;
     position: absolute;
     right: 0;
-    top: 2px;
+    top: 42px;
   }
 }
